1-system/6-rabbitmq/rabbitmq.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    # HPE: rabbitmq.ingress.pcai0201.fr2.hpecolo.net
    - rabbitmq.2.28.18.215.sslip.io
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: rabbitmq.unique.svc.cluster.local
            port:
              number: 15672
